# GovSniper

./: .env.example  .gitignore  API_EXAMPLES.md  CUsersNIKOCE~2AppDataLocalTempclaudee--VibeProjects-GovSnipered392a0a-d815-412a-ad4d-36301c42ce4cscratchpadclient.json  Dockerfile  INSTALL.md  QUICKSTART.md  RAILWAY_DEPLOY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.env.example  railway.json  requirements.txt
alembic/: env.py
alembic/versions/: 2024_01_01_0000-initial_schema.py  2025_02_05_0001-add_participants_and_leadgen.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  admin.py  health.py  webhooks.py
src/db/: __init__.py  session.py
src/models/: __init__.py  base.py  client.py  notification.py  participant.py  payment.py  tender.py
src/scheduler/: __init__.py  cleanup.py  job_stats.py  jobs.py
src/schemas/: __init__.py  payment.py  tender.py  webhook.py
src/services/: __init__.py  ai_service.py  dadata_service.py  document_service.py  email_service.py  losers_service.py  notification_service.py  payment_service.py  pdf_generator.py  pdf_generator_stub.py  scraper_service.py
src/static/: index.html
src/templates/emails/: report_delivery.html  teaser.html
src/templates/reports/: deep_audit.html
tests/: __init__.py  conftest.py  test_health.py
